#92 #93 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -32,8 +32,15 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 ### 07 Feb 2022
 
- - News Sources: added option for publication cycles that are less frequent than monthly
- - News Sources: user comments on websites are now captured in two separate variables: one asking for the presence of user generated comments in general, the second one whether an account is required to leave comments.
+#### News Sources
+ - added option for publication cycles that are less frequent than monthly
+ - user comments on websites are now captured in two separate variables: one asking for the presence of user generated comments in general, the second one whether an account is required to leave comments.
+ - news sources can now be affiliated with political parties. The view/add/edit screens now show this variable
+
+#### Organisations
+ - Organisations can now have the ownership kind "Political Party"
+ - Organisations can now also be affiliated with political parties (same as for news sources)
+
         {% endfilter %}
 </div>
 </div>
