--- a/flaskinventory/templates/add/database_check.html
+++ b/flaskinventory/templates/add/database_check.html
@@ -36,7 +36,7 @@
             {% if entry.get('entry_review_status') == 'draft' %}
             <a class="btn btn-sm btn-primary" href="{{ url_for('add.new_source', draft=entry.get('uid')) }}">Continue editing</a>
             {% else %}
-            <span class="text-muted">none</span>
+            <a class="btn btn-sm btn-primary" href="{{ url_for('add.new_source', existing=entry.get('uid')) }}">Add related</a>
             {% endif %}
         </td>
       </tr>
