--- a/flaskinventory/templates/view/source_sidebar.html
+++ b/flaskinventory/templates/view/source_sidebar.html
@@ -14,6 +14,15 @@
                     </div>
                     <div class="col-10 mb-1 small"></div>
                 </a>
+            {% elif item.entry_review_status == "pending" %}
+                <a href="{{ url_for('view.view_source', unique_name=item.unique_name) }}" class="list-group-item list-group-item-action py-3 lh-tight">
+                    <div class="d-flex w-100 align-items-center justify-content-between">
+                        <strong class="mb-1 text-muted"><i class="icon-{{ item.channel.unique_name }} color-{{ item.channel.unique_name }} fa-fw mx-1" alt="{{ item.channel.name }}"></i>
+                            {{ item.name }} ({{item.channel.name}})</strong>
+                        <small class="text-muted">pending</small>
+                    </div>
+                    <div class="col-10 mb-1 small"></div>
+                </a>
             {% endif %}
         {% endfor %} 
 
