#96 implemented sidebar for organizations

--- a/flaskinventory/templates/view/organization.html
+++ b/flaskinventory/templates/view/organization.html
@@ -6,3 +6,8 @@
 
 </article>
 {% endblock content %}
+
+
+{% block sidebar %} 
+    {% include "view/elements/organization_sidebar.html" %} 
+{% endblock sidebar %}
