--- a/flaskinventory/templates/review/overview.html
+++ b/flaskinventory/templates/review/overview.html
@@ -52,7 +52,7 @@
                     <td>{% if entry.entry_added.get("entry_added|timestamp") %}{{ entry.entry_added.get("entry_added|timestamp").strftime('%d-%m-%Y') }}{% endif %}</td>
                     <td>{{ entry.entry_added.get("user_displayname") }}</td>
                     <td>
-                        <div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('review.entry', uid=entry.get('uid'), **request.args)}}">Review</a></div>
+                        <div class="btn-group btn-group-sm" role="group"><a class="btn btn-primary" href="{{ url_for('view.view_uid', uid=entry.get('uid'), **request.args)}}">Review</a></div>
                     </td>
             </tr>
             {% endfor %} {% endif %}
