--- a/flaskinventory/templates/view/elements/detail_archive.html
+++ b/flaskinventory/templates/view/elements/detail_archive.html
@@ -6,9 +6,7 @@
         <h2>{{ entry.name }} <small class="fs-6 mx-4 text-muted">({{ entry.uid }})</small></h2>
     </div>
     <div>
-        {% if current_user.user_role > 1 %}
-            <a class="btn btn-primary" href="{{ url_for('edit.archive', uid=entry.uid) }}">Edit</a>
-        {% endif %}
+        {% include "view/elements/review_actions.html" %}
     </div>
 </div>
 
