--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -14,9 +14,7 @@
         </h2>
     </div>
     <div>
-    {% if current_user.user_role > 1 %}
-        <a class="btn btn-primary" href="{{ url_for('edit.source', uid=entry.uid) }}">Edit</a>
-    {% endif %}
+    {% include "view/elements/review_actions.html" %}
     </div>
 </div>
 
