#95 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -37,6 +37,7 @@ In case some technical aspect is not working you can raise an issue in our [gith
  - user comments on websites are now captured in two separate variables: one asking for the presence of user generated comments in general, the second one whether an account is required to leave comments.
  - news sources can now be affiliated with political parties. The view/add/edit screens now show this variable.
  - users can now add related sources to existing entries. The feature is now available either via the "add new" page or from viewing a news source. The "add related" button at the sidebar takes the user to a pre-filled form.
+ - When viewing a news source, sidebar now also shows "pending" entries. 
 
 #### Organisations
  - Organisations can now have the ownership kind "Political Party".
