#13 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -44,6 +44,9 @@ In case some technical aspect is not working you can raise an issue in our [gith
  - Organisations can now also be affiliated with political parties (same as for news sources).
  - When viewing organizations the published sources are now shown in the sidebar.
 
+#### Reviewing
+ - Reviewing and editing an entry can now be done in one go.
+
         {% endfilter %}
 </div>
 </div>
