--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -166,7 +166,7 @@
         <dt class="col-sm-3">Languages</dt>
         <dd class="col-sm-9">
             {% for language in entry.languages_pretty %}
-             <span class="badge bg-primary">{{ language }}</span>{{ ", " if not loop.last else "" }}
+             <span class="badge bg-primary me-2">{{ language }}</span>
              {% endfor %}
             </dd>
         {% endif %}
