--- a/flaskinventory/static/css/main.css
+++ b/flaskinventory/static/css/main.css
@@ -148,3 +148,34 @@ dt {
     padding-right: 4px;
     margin-left: -24px;
 }
+
+.bd-toc {
+    position: sticky;
+    top: 3rem;
+    right: 0;
+    z-index: 2;
+    height: calc(100vh -10rem);
+    overflow-y: auto;
+}
+
+.bd-toc nav a {
+    color: inherit;
+}
+
+.bd-toc nav a:not(:hover) {
+    text-decoration: none;
+}
+
+.bd-toc nav ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+.bd-toc nav ul ul {
+    padding-left: 1rem;
+    margin-top: 0.25rem;
+}
+
+.bd-toc nav li {
+    margin-bottom: 0.25rem;
+}
