#105 #101 #99 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -30,6 +30,12 @@ In case some technical aspect is not working you can raise an issue in our [gith
 
 # Changelog
 
+### 15 Feb 2022
+
+ - Improvements for the user interface
+ - Added more languages to the selection
+ - The news sources mentioned in the [guides]({{ url_for('main.guides_newssource')}}) are now added to the inventory as examples
+
 ### 07 Feb 2022
 
 #### News Sources
