#27 added to changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -35,6 +35,7 @@ In case some technical aspect is not working you can raise an issue in our [gith
  - Improvements for the user interface
  - Added more languages to the selection
  - The news sources mentioned in the [guides]({{ url_for('main.guides_newssource')}}) are now added to the inventory as examples
+ - Added [FAQ Section]({{ url_for('main.guides_faq')}}).
 
 ### 07 Feb 2022
 
