--- a/flaskinventory/templates/edit/_formhelpers.html
+++ b/flaskinventory/templates/edit/_formhelpers.html
@@ -1,5 +1,5 @@
 {% macro render_field(field) %}
-
+{% if field %}
 <div class="mb-3">
     {{ field.label() }}
     {% if field.errors %} 
@@ -28,5 +28,6 @@
         {% endif %}
     {% endif %} 
 </div>
-
+{% else %}
+{% endif %} 
 {% endmacro %}
