--- a/flaskinventory/templates/helpers/_formhelpers.html
+++ b/flaskinventory/templates/helpers/_formhelpers.html
@@ -1,4 +1,5 @@
 {% macro render_field(field) %}
+{% if field %}
 {% if field.name == 'uid' %}
 {{ field(class="form-control form-control-lg", hidden="true") }} 
 {% elif field.type == 'BooleanField' %}
@@ -52,4 +53,5 @@
 </div>
 {% endif %}
 
+{% endif %}
 {% endmacro %}
