--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -52,6 +52,10 @@ All resources are curated by the WP3 Team and the list is updated irregularly.</
 - [MediaDB](https://www.mediadb.eu/): Information about the media landscape in German (EU)
 - [DieMedien.at](https://diemedien.at/): Background information about media (Austria)
 
+## Alternative Media
+
+- [PSIRAM](https://www.psiram.com/de/index.php/Hauptseite): Wiki of "alternative belief systems". Contains information about various alternative media (German).
+
 [TOC]
 
 {% endfilter %}
